--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="text-center sitetitle">Vinh's Tech News</h1>
     <div class="row container mx-auto">
-        <div class="col-2 left-panel">
+        <div class="col-2 d-none d-md-block left-panel">
             <div id="panel-upper">Showing <span id="currentArticles"></span> of <span id="totalArticles"></span></div>
             <div>
                 <ul id="sourcelist">
@@ -27,9 +27,9 @@
                 </ul>
             </div>
         </div>
-        <div class="col-8" id="newsArea">
+        <div class="col-12 col-md-8" id="newsArea">
         </div>
-        <div class="col-2 right-panel">Some stuff here later</div>
+        <div class="col-2 d-none d-md-block right-panel">Some stuff here later</div>
     </div>
     <div class="row justify-content-center">
         <button class="loadmore" onclick="loadMore(20)">Load More</button>
