searchbox and categories

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <h1 class="text-center sitetitle">Vinh's Tech News</h1>
+    <div class="text-center searchbox">
+        <input type="text" id="queryinput">
+      <button onclick="changeQuery()">Search</button>
+    </div>
     <div class="row container mx-auto">
         <div class="col-2 d-none d-md-block left-panel">
             <div id="panel-upper">Showing <span id="currentArticles"></span> of <span id="totalArticles"></span></div>
@@ -29,7 +33,16 @@
         </div>
         <div class="col-12 col-md-8" id="newsArea">
         </div>
-        <div class="col-2 d-none d-md-block right-panel">Some stuff here later</div>
+        <div class="col-2 d-none d-md-block right-panel">
+            <label for="cat">Category:</label>
+            <select name="cat" id="cat" onchange="changeCategory()">
+            <option value="">------</option>
+            <option value="health">Health</option>
+            <option value="entertainment">Entertainment</option>
+            <option value="technology">Technology</option>
+            <option value="science">Science</option>
+            </select>
+        </div>
     </div>
     <div class="row justify-content-center">
         <button class="loadmore" onclick="loadMore(20)">Load More</button>
