--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Noticia+Text:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Vinh's News</title>
 </head>
@@ -14,6 +15,7 @@
         <input type="text" id="queryinput">
       <button onclick="changeQuery()">Search</button>
     </div>
+    <hr>
     <div class="row container mx-auto">
         <div class="col-md-3 d-none d-md-block left-panel">
             <div id="panel-upper">Showing <span id="currentArticles"></span> of <span id="totalArticles"></span></div>
